HW3/javali_tests/others/new/HW3_MarLin/type_error/binary_op/ErrArithmeticBinOp1.javali
class Main {

   void main() {
      int i;
      i = 1;
      i = i + null;
   }
}
